Multiple changes in this push Updated support page to include a form and table for tickets(WIP) Updated dashboard index page metadata Updated main header to include new pages, online status, and text changes Added main footer(WIP) Updated main.js to include loader the footer Added home.js for the main index page, added countdown function Added contact.js for contact page(WIP) Updated tailwind.output.css to include missing/custom css Updated TOS page to include information and edited shorthand name to long Fixed register page spacing issues on mobile Added metadata to login page and fixed spacing Added metadata information to main page, removed discord embed, and added a countdown Fixed spacing on forgot password page Added discord page for easy access Added contact page with a form for submitting a ticket along with links to discord page, and email Updated settings.json to include correct words Added main footer to all main pages

--- a/src/public/assets/css/tailwind.output.css
+++ b/src/public/assets/css/tailwind.output.css
@@ -24,8 +24,23 @@
 ::after {
   --tw-content: "";
 }
+.pb-20 {
+  padding-bottom: 5rem;
+}
 .pb-10 {
   padding-bottom: 2.5rem /* 40px */;
+}
+.pb-14 {
+  padding-bottom: 3.5rem;
+}
+.pt-14 {
+  padding-top: 3.5rem;
+}
+.pt-18 {
+  padding-top: 4.5rem;
+}
+.pb-6rem {
+  padding-bottom: 6rem !important;
 }
 /*
 1. Use a consistent sensible line-height in all browsers.
@@ -1128,6 +1143,10 @@ select {
   margin-top: 3rem /* 48px */;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -1158,6 +1177,10 @@ select {
 
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mr-2 {
@@ -2492,6 +2515,18 @@ input {
 .dark .dark\:focus\:placeholder-gray-600:focus::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(75 85 99 / var(--tw-placeholder-opacity));
+}
+.mt-custom {
+  margin-top: 71px;
+}
+
+@media (min-height: 300px) {
+  .sm\:mt-8 {
+    margin-top: 2rem;
+  }
+  .sm\:mt-14 {
+    margin-top: 3.5rem;
+  }
 }
 
 @media (min-width: 640px) {
